--- a/ClientApp/src/app/pdr-management/new-microbiology-params/add-microbiology/add-microbiology.component.html
+++ b/ClientApp/src/app/pdr-management/new-microbiology-params/add-microbiology/add-microbiology.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="form-inline">
         <label style="margin-left:10px;">Method</label>
-        <input type="text" class="form-control" size="12" style="margin-left:10px;" id="mthdName" name="mthddata" #mthd>
+        <input type="text" class="form-control" size="12" style="margin-left:10px;" id="mthdName" name="mthddata" #mthd [(ngModel)]="Method">
       </div>
     </div>
   </div>
@@ -25,7 +25,7 @@
         <div style="margin-top:1%">
           <div class="form-inline">
             <mat-dialog-actions>
-              <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:40px;">New</button>
+              <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:40px;" (click)="Clear();">New</button>
               <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" (click)="Addmicrobioparams(tst.value,mthd.value);" matDialogClose>Add</button>
               <button type="submit" class="btn btn-primary buttoncolor " style="margin-left:5px;" matDialogClose>Back</button>
             </mat-dialog-actions>
