--- a/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
+++ b/ClientApp/src/app/raw-material/add-supplier/add-supplier.component.html
@@ -351,7 +351,7 @@
                         <mat-progress-spinner class="center" style="display: flex; justify-content: center; align-items: center; " *ngIf="isLoading;else conten" color="accent"
                                               mode="indeterminate">
                         </mat-progress-spinner>
-                        <tr *ngFor="let formula_Details of formuladetails " (click)="setvaluescomponent( Component_Details);" #conten>
+                        <tr *ngFor="let formula_Details of formuladetails " (click)="setvaluescomponent( Component_Details);"(dblclick)="setvaluescomponent2();" #conten>
                           <td class="tabledatasize">{{ formula_Details.PDRNo }}</td>
                           <td class="tabledatasize">{{ formula_Details.ProjectName}}</td>
                           <td class="tabledatasize">{{ formula_Details.FormulaCode}}</td>
