--- a/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.css
+++ b/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.css
@@ -205,3 +205,16 @@ h2.design {
   display: inline-block;
   width: 150px;
 }
+input[type="file"] {
+  display: none;
+}
+
+
+
+.custom-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  color: blueviolet;
+}
