--- a/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.html
+++ b/ClientApp/src/app/formula-restriction/rawmaterial-restriction-us/rawmaterial-restriction-us.component.html
@@ -4,7 +4,7 @@
 
   <div class="form-inline" style="padding-top:1%;">
     <label class="label1" for="inputcust" style="color:maroon">INCI NAME</label>
-    <input style="margin-left: 1%; width: 60%; color:maroon" [(ngModel)]="restrictionformulaname" type="text" class="form-control">
+    <input disabled style="margin-left: 1%; width: 60%; color:maroon" [(ngModel)]="restrictionformulaname" type="text" class="form-control">
   </div>
   <fieldset class="border p-2">
     <legend class="w-auto" style="font-size:15px;color:maroon">Review Conclusion</legend>
