--- a/ClientApp/src/app/formula-restriction/rawmaterial-restriction-prop65/rawmaterial-restriction-prop65.component.html
+++ b/ClientApp/src/app/formula-restriction/rawmaterial-restriction-prop65/rawmaterial-restriction-prop65.component.html
@@ -4,7 +4,7 @@
 
   <div class="form-inline" style="padding-top:1%;">
     <label class="label1" for="inputcust" style="color:maroon">INCI NAME</label>
-    <input style="margin-left: 1%; width: 60%; color:maroon" [(ngModel)]="restrictionformulaname" type="text" class="form-control">
+    <input disabled style="margin-left: 1%; width: 60%; color:maroon" [(ngModel)]="restrictionformulaname" type="text" class="form-control">
   </div>
   <style>
 
