--- a/ClientApp/src/app/formula-restriction/rawmaterial-restriction/rawmaterial-restriction.component.html
+++ b/ClientApp/src/app/formula-restriction/rawmaterial-restriction/rawmaterial-restriction.component.html
@@ -4,7 +4,7 @@
 
   <div class="form-inline" style="padding-top:1%;">
     <label class="label1" for="inputcust" style="color:maroon">INCI NAME</label>
-    <input style="margin-left: 1%; width: 60%; color:maroon" [(ngModel)]="INCINamedata" type="text" class="form-control">
+    <input disabled style="margin-left: 1%; width: 60%; color:maroon" [(ngModel)]="INCINamedata" type="text" class="form-control">
   </div>
 
 
@@ -25,7 +25,7 @@
   </div>
   <div class="form-inline" style="padding-top:1%;">
     <label [hidden]="ifchina">Minimum Percentage</label>
-    <input [hidden]="ifchina" style="width: 15%;" type="text" class="form-control" [(ngModel)]="minpercent" name="minper" value="" (blur)=" blurpercentage($event);">
+    <input [hidden]="ifchina" style="width: 15%;" type="text" class="form-control" [(ngModel)]="minpercent" name="minper" value="" (blur)=" blurminpercentage($event);">
 
     <label [hidden]="ifchinamax">Maximum Percentage</label>
     <input [hidden]="ifchinamax" style="margin-left: 1%; width: 15%;" type="text" class="form-control" [(ngModel)]="maxpercentagedata" name="maxperc" value="" (blur)=" blurmaxpercentage($event);">%
