--- a/ClientApp/src/app/formula-restriction/rawmaterial-restriction-prop65/rawmaterial-restriction-prop65.component.html
+++ b/ClientApp/src/app/formula-restriction/rawmaterial-restriction-prop65/rawmaterial-restriction-prop65.component.html
@@ -71,7 +71,7 @@
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px" matDialogClose>Close</button>
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;width:100px;margin-top:1%;margin-left:10px"(click)="Cleardata();">New</button>
 
-    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;margin-top:1%;margin-left:10px" (click)="Restriction_SaveUpdate();">Save / Update</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;height:50px;margin-top:1%;margin-left:10px" (click)="Restriction_SaveUpdate();"matDialogClose>Save / Update</button>
 
   </div>
 </div>
