--- a/ClientApp/src/app/pdr-management/new-chemistry-params/new-chemistry-params.component.html
+++ b/ClientApp/src/app/pdr-management/new-chemistry-params/new-chemistry-params.component.html
@@ -1,9 +1,9 @@
 <div style="background-color: #f6f5f1;  height:50vh;">
- 
-   
-      <h2 style="    margin-bottom: 5px; margin-top:5px;font-family: Playfair Display;    background-color: #f6f5f1; color: black; text-align:center">Chemistry Params</h2>
-    
- 
+
+
+  <h2 style="    margin-bottom: 5px; margin-top:5px;font-family: Playfair Display;    background-color: #f6f5f1; color: black; text-align:center">Chemistry Params</h2>
+
+
 
   <div style="margin-left:1%;margin-top:1%; height:450px; overflow-y: auto;">
     <!--<table class="table table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="98%">
@@ -83,8 +83,14 @@
 
     </dx-data-grid>
   </div>
+  <div style="background-color: #f6f5f1;">
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="openaddchemistry()">Add New Param</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="SaveProperty()">Save</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="chemparamdelete()">Delete Param</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" matDialogClose>Back</button>
   </div>
-<div style="background-color: #f6f5f1;" >
+</div>
+<!--<div style="background-color: #f6f5f1;" >
  
           
             <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="openaddchemistry()">Add New Param</button>
@@ -92,7 +98,7 @@
             <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="chemparamdelete()">Delete Param</button>
             <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" matDialogClose>Back</button>
       
-        </div>
+        </div>-->
      
 
 
