--- a/ClientApp/src/app/pdr-management/pdr-management.component.html
+++ b/ClientApp/src/app/pdr-management/pdr-management.component.html
@@ -197,19 +197,19 @@
                                 <legend class="w-auto" style="font-size:15px;color:black">Sizes(s)</legend>
                                 <div class="form-inline">
                                   <input style="width:50px;margin-left:10px" type="text" class="form-control" id="Current Intended End market" [(ngModel)]="size1" name="siz1" value="">
-                                  <label for="siz1" style="margin-left: 10px">size1</label>
+                                  <label for="siz1" style="margin-left: 10px">ounces</label>
                                   <input style="width:50px;margin-left:20px" type="text" class="form-control" id="Current Intended End market" [(ngModel)]="gallons" name="gln" value="">
                                   <label for="gallon" style="margin-left: 10px">Gallons</label>
                                 </div>
                                 <div class="form-inline">
                                   <input style="width:50px;margin-left:10px" type="text" class="form-control" id="Current Intended End market" [(ngModel)]="size2" name="bonly" value="">
-                                  <label for="siz2" style="margin-left: 10px">size2</label>
+                                  <label for="siz2" style="margin-left: 10px">ounces</label>
                                   <input style="width:50px;margin-left:20px" type="text" class="form-control" id="Current Intended End market" [(ngModel)]="bulkonly" name="s1" value="">
                                   <label for="blk" style="margin-left: 10px">Bulk Only </label>
                                 </div>
                                 <div class="form-inline">
                                   <input style="width:50px;margin-left:10px" type="text" class="form-control" id="Current Intended End market" [(ngModel)]="size3" name="s3" value="">
-                                  <label for="siz3" style="margin-left: 10px">size3</label>
+                                  <label for="siz3" style="margin-left: 10px">ounces</label>
                                 </div>
                               </fieldset>
                             </div>
