--- a/ClientApp/src/app/pdr-management/new-microbiology-params/new-microbiology-params.component.html
+++ b/ClientApp/src/app/pdr-management/new-microbiology-params/new-microbiology-params.component.html
@@ -1,7 +1,7 @@
 <div style="    background-color: #f6f5f1;height:50vh;">
- 
-        <h2 style="    margin-bottom: 5px; margin-top:5px;font-family: Playfair Display;    background-color: #f6f5f1; color: black; text-align:center">Microbiology Params</h2>
-   
+
+  <h2 style="    margin-bottom: 5px; margin-top:5px;font-family: Playfair Display;    background-color: #f6f5f1; color: black; text-align:center">Microbiology Params</h2>
+
   <div style="margin-left:1%;margin-top:1%; height:450px; overflow-y: auto;">
 
     <dx-data-grid id="gridContainer " style="width: 100%; height: 35rem;font-family:Verdana;font-style:normal;background-color:white"
@@ -58,14 +58,20 @@
 
     </dx-data-grid>
   </div>
+  <div style="background-color: #f6f5f1;">
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="openaddmicrobiology()">Add New Param</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="SaveProperty()">Save</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="microbioparamdelete()">Delete Param</button>
+    <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" matDialogClose>Back</button>
   </div>
+</div>
 
-    <div style="background-color: #f6f5f1;">
+    <!--<div style="background-color: #f6f5f1;">
       <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="openaddmicrobiology()">Add New Param</button>
       <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="SaveProperty()">Save</button>
       <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="microbioparamdelete()">Delete Param</button>
       <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" matDialogClose>Back</button>
-    </div>
+    </div>-->
         
 
 
